css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;

}

:root {
    --primary-color: #4891ff;
}


body {
    font-family: 'Poppins';
    font-size: 16px;
    line-height: 1.5;
    background: #fff;
    

    min-height: 100vh;
    display: grid;
    grid-template-rows: auto 1fr;
    

    color: #555
}
a {
    text-decoration: none;
    color: #333;
    transition: 0.5s;

}

a:hover {
    color: var(--primary-color);
}

ul {
    list-style: none;

}

.bullet {
    list-style-type: disc;
    list-style-position: inside;
    padding-left: 1em;
}

ol {
    padding-top: 20px;
    padding-left: 2em;

}

ol ::marker {
    font-weight: 400;
    color: #000000;
}

li {
    margin-bottom: 10px;

}

/* imagens */

img {
    margin: 0 auto;
    display: block;
    max-width: 70%;
    
}

.sideimg-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* h's */
h1 {
    color: #333;
    
}

h2 {
    margin-top: 1em;
    color: #333; 
}

h3 {
    margin-top: 0.8em;
    padding-top: 0.8em;
    color: #333;
}

h4 {
    margin-top: 0.5em;
    padding-top: 0.5em;
    color: #333;
}

p {
    
    padding-top: 1.2em;
    text-align: justify;
}

main {
    max-width: 50em;
    margin: 0px auto;
    padding-bottom: 5vh;
    
    
}

/* hero */
.hero {
    margin: 40px auto 0 auto;
}

.hero .container {
    background-size: contain;
    background-position: center bottom;
    height: 350px;
}

.hero .hero-content {
    width: 100%;
    display: flex;
    align-items: center;
    
}

.hero .hero-text {
    width: 90%;
    
}

.hero .hero-image img  { 
    max-width: 80%; 
    width: 600px;
    height: auto;
    border-radius: 50%; /* Makes the image round */
    
}

/* Utility navbar */
.navbar {
    position: static;
    top: 0px;
    left: 0;
    width: 100%;
    height: 60px;
    background: #fff;
    text-align: center;

    border-bottom: 5px solid #636363;
    
}

.navbar .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar .main-menu ul {
    display: flex;
}

.navbar ul li a {
    padding: 10px 20px;
    display: block;
    font-weight: 600;
    transition: 0.5s;
    white-space: nowrap;
}

.navbar ul li a:hover {
    color: var(--primary-color);
}

.navbar .container .logo img {
    width: 100px;
    height: auto;
    margin-left: 0;
}


/* footer */
.footer {
    width: 100%; /* Full viewport width */
    position: static;
    padding-top: 1vh;

}

.footer h4 {
    padding-bottom: 10px;
    color: #fff;
}

footer ul li {
    line-height: 1.1;
}

.footer a {
    color: #ccc;
}

.footer i {
    font-size: 2.5em;
    padding-right: 40px;
}

.footer-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 20px;
    justify-content: center;
    align-items: center;
    padding-left: 20px;
}


.footer-icons {
    display: none;
    grid-template-columns: 1fr 1fr 1fr;
    justify-content: center;
    align-items: center;
    gap: 15vw;
    padding: 4vh auto;
}

.footer-icons i {
    font-size: 2.5rem;
}

/* background */

.bg-black {
    background: #000;
    color: #fff
}

/* card */

.card {
    background: #000;
    border-radius: 10px;
    padding: 20px;
    margin-top: 20px;
}

.testimonials-grid {
    display: grid;
    gap: 30px;
}

.card h2, .card h3, .card p {
    color: #fff;
}

.card p {
    padding-top: 10px;
    font-weight: 200;
}


/* table */
table {
    width: 100%;
    border-collapse: collapse;
    margin: 20px 0;
    font-size: 18px;
    text-align: left;
}

th {
    border-bottom: 1.5px solid black;
    border-top: 2px solid black;
}

tr:last-child td {
    border-bottom: 2px solid black;
}

.widetable {
    font-size: 14px;
    margin: 20px;
    width: 150%;
    margin-left: -25%;
}


/* hamburguer */
.mobile-menu {
    position: fixed;
    top: 0;
    right: -500px;
    width: 250px;
    height: 380px;
    z-index: 100;
    background: #fff;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
    transition: right 0.3s ease-in-out;
    border-radius: 5%;
    margin-top: 5vh;

}

.hamburger-button {
    display: none;
    border: none;
    background: none;
    cursor: pointer;
    z-index: 1000;
    padding: 0 5vw 0 0;
}

.hamburger-button .hamburger-line {
    width: 30px;
    height: 3px;
    background: #333;
    margin: 5px 0px;
}

.mobile-menu ul li a {
    font-size: 30;

}

.mobile-menu.active {
    right: 0;
}


/* queries */

@media (max-width: 760px) {
    body {
        font-family: 'Poppins';
        font-size: 16px;
        line-height: 1.5;
        background: #ffffff;
        min-height: 100vh;
        display: grid;
        grid-template-rows: auto 1fr;
        overflow: hidden;
        max-width: 100vw;
        color: #555;
    }

    main {
        max-width: 90vw;
        margin: 0px auto;
        padding-bottom: 5vh;          
        
    }
    
    .hero {
        margin: 2vh auto 2vh 5vw;
        display: flex;
        padding-bottom: 10vh;
        flex-grow: 1;

    }
    
    .hero .hero-content {
        width: 90vw;
        /* display: flex; */
        flex-direction: column;
        align-items: center;
        justify-content: center;
        
    }

    .hero .hero-text {
        width: 90vw;
    
    }
    
    .hero .hero-image img  { 
        max-width: 80%;
        height: auto;
        border-radius: 50%;
        padding-bottom: 6vh;
        
    }

    .navbar .main-menu {
        display: none;
    }
    
    .navbar .hamburger-button {
        display: block;
    }

    .footer {
        padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 10px);
    }

    .footer-grid {
        display: none;
    }
    
    .footer-icons {
        display: flex;
    }
  }



  

